# project-template

./: .gitignore  DEPLOYMENT_GUIDE_OFFLINE.md  README.md  deploy-dev.sh  prepare-wheels.sh
chat-api/app/backend/: .env.example  Dockerfile  Dockerfile.dev  install_packages.sh  llm_chat_client.html  pyproject.toml  requirements-freeze.txt  requirements.txt  setup_local_dev_with_py312.sh
chat-api/app/backend/ai_backend/: main.py
chat-api/app/backend/ai_backend/api/routers/: cache_router.py  chat_router.py  document_router.py  group_router.py  rating_router.py  user_router.py
chat-api/app/backend/ai_backend/api/services/: document_service.py  group_service.py  llm_chat_service.py  llm_provider_factory.py  user_service.py
chat-api/app/backend/ai_backend/cache/: redis_client.py
chat-api/app/backend/ai_backend/config/: __init__.py  simple_settings.py
chat-api/app/backend/ai_backend/core/: dependencies.py  global_exception_handlers.py
chat-api/app/backend/ai_backend/database/: base.py
chat-api/app/backend/ai_backend/database/crud/: chat_crud.py  document_crud.py  group_crud.py  rating_crud.py  user_crud.py
chat-api/app/backend/ai_backend/database/models/: chat_models.py  document_models.py  group_models.py  user_models.py
chat-api/app/backend/ai_backend/middleware/: __init__.py
chat-api/app/backend/ai_backend/types/enums/: query.py
chat-api/app/backend/ai_backend/utils/: logging_utils.py  uuid_gen.py
chat-api/app/backend/k8s/: deploy.sh  deployment.yaml  dev-deployment.yaml  dev-service.yaml  ingress.yaml  kustomization.yaml  persistent-volume.yaml
(+185 files in other folders)
